[package]
name = "cheap-ruler"
version = "0.2.0"
description = "A Rust port of cheap-ruler, a collection of very fast approximations to common geodesic measurements"
license-file = "LICENSE"
repository = "https://github.com/vipera/cheap-ruler-rs/"
authors = ["Marin Rukavina <marin@shinyshell.net>"]
edition = "2018"

[dependencies]
geo-types = "^0.7"
num-traits = "^0.2"

[dev-dependencies]
lazy_static = "1.4"
