[package]
name = "cheap-ruler"
version = "0.4.0"
description = "A Rust port of cheap-ruler, a collection of very fast approximations to common geodesic measurements"
license = "ISC"
repository = "https://github.com/vipera/cheap-ruler-rs/"
homepage = "https://github.com/vipera/cheap-ruler-rs/"
documentation = "https://docs.rs/cheap-ruler-rs/"
authors = ["Marin Rukavina <marin@shinyshell.net>"]
edition = "2018"

[dependencies]
geo-types = "^0.7"
num-traits = "^0.2"

[dev-dependencies]
geo = "^0.26"
lazy_static = "1.4"
criterion = "0.5"

[[bench]]
name = "geo"
harness = false
